--- a/default.css
+++ b/default.css
@@ -42,6 +42,15 @@ body {
     text-align: center;
 }
 
+.btn {
+    border: 1px solid white;
+    padding: 12px 15px;
+    color: white;
+    text-decoration: none;
+    border-radius: 3px;
+    margin-top: 15px;
+}
+
 @keyframes float {
     0% {
         -webkit-transform: translatey(0px);
