--- a/default.css
+++ b/default.css
@@ -42,6 +42,10 @@ body {
     text-align: center;
 }
 
+.showcase div {
+    margin-top: 30px;
+}
+
 .btn {
     border: 1px solid white;
     padding: 12px 15px;
@@ -49,6 +53,11 @@ body {
     text-decoration: none;
     border-radius: 3px;
     margin-top: 15px;
+}
+
+.btn.fill {
+    background-color: white;
+    color: #1d1b26;
 }
 
 @keyframes float {
